ui: fix overflow for long table name and .Title css

--- a/querybook/webapp/components/BoardExpandableList/BoardExpandableSection.scss
+++ b/querybook/webapp/components/BoardExpandableList/BoardExpandableSection.scss
@@ -20,12 +20,6 @@
         .board-header-title {
             cursor: pointer;
             overflow: hidden;
-
-            .Title {
-                color: var(--text-light);
-                text-transform: capitalize;
-                user-select: none;
-            }
         }
 
         .header-control-section {
