--- a/querybook/webapp/components/DataTableNavigator/DataTableNavigatorSearch.scss
+++ b/querybook/webapp/components/DataTableNavigator/DataTableNavigatorSearch.scss
@@ -34,7 +34,7 @@
             padding-bottom: 2px;
         }
 
-        .Title {
+        .search-filter-title {
             margin-left: 10px;
             min-width: 70px;
         }
